Fix scrolling glitch on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -29,15 +29,15 @@ body {
 
 .dark-background {
   position: fixed;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: #0a0a0a;
 }
 
 .container {
   position: relative;
   max-width: 28.75rem;
-  padding: 1.5rem;
+  padding: 1.5rem 1.5rem 5rem;
   box-sizing: border-box;
   margin: 0 auto;
 }
